[build-system]
requires = ["scikit-build-core >= 0.11.6"]
build-backend = "scikit_build_core.build"

[project]
name = "findmytau"
version = "0.0.1"
dependencies = [
  "cmake >= 4.1.0",
  "ninja >= 1.13.0",
  "numpy >= 2.3.2",
]
requires-python = ">=3.11"
authors = [
  {name = "Rodrigo Duran", email = "rads2995@gmail.com"},
]
maintainers = [
  {name = "Rodrigo Duran", email = "rads2995@gmail.com"},
]
description = "Risk-Aware Optimal Stopping via Gradient-Boosted Quantile Regression."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["Optimal Stopping", "Gradient Boosting", "Quantile Regression"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
# Homepage = ""
# Documentation = ""
Repository = "https://github.com/rads2995/RiskyQuant"
# "Bug Tracker" = ""
# Changelog = ""

[project.scripts]
findmytau = "findmytau.main:main"

[tool.scikit-build]
build.verbose = true
minimum-version = "build-system.requires"
cmake.version = ">=4.1"
ninja.version = ">=1.13"

cmake.source-dir = "thirdparty/xgboost"
cmake.build-type = "Release"

build-dir = "build/{wheel_tag}"

build.tool-args = ["-j6"]

[tool.scikit-build.cmake.define]
USE_CUDA = "OFF"
PLUGIN_SYCL = "OFF"
